# rcjp2019

./: README.md
src/inspection/: CMakeLists.txt  package.xml  waypoints.txt
src/inspection/launch/: get_waypoints.launch  inspection.launch  map_setup.launch  navigation_demo.launch  start_turtle.launch
src/inspection/maps/: 314.yaml  314_hokuyo.pgm  314_hokuyo.yaml  sydney_room_1.pgm  sydney_room_1.yaml  sydney_room_1_modefied.pgm  sydney_room_2.yaml
src/inspection/src/: door_detect.cpp  inspect_navigation.cpp  inspection_control.py
src/kamerider_control/kamerider_control_core/: CMakeLists.txt
src/kamerider_control/kamerider_control_core/launch/: basic_func.launch  start_turtle.launch
src/kamerider_control/kamerider_control_msgs/: CMakeLists.txt
src/kamerider_navigation/kamerider_navigation_core/: gpsr_waypoints (another copy).txt  gpsr_waypoints.txt
src/rchomeedu_speech/launch/: lm.launch  sound_test.launch  speech_all.launch
src/rchomeedu_speech/robocup/: 1822.dic  1822.lm  1822.log_pronounce  1822.sent  1822.vocab  2067.dic  2067.lm  2067.log_pronounce  2067.sent  2067.vocab  gpsr.corpus  questions.txt  rcjp.corpus  spr.corpus
src/rchomeedu_speech/scripts/: answer_question.py  get_audio.py  human_detector.py  lm_test.py  person_detection (copy).py  person_detection.py  play_signal_sound.py  sound_test.py  speech_recognition.py  speech_recognition_fast.py  talkback (elect) (copy).py  talkback (elect).py  talkback(non_elec).py  talkback.py  talkback_xfei.py
src/rcjp_speech_msgs/: CMakeLists.txt  package.xml
src/srv/: SetRecState.srv
(+29 files in other folders)
